# gix

./: .clippy.toml.bak  AGENTS.md  Cargo.toml  README.md  TEST_MATRIX.md  rustfmt.toml  test.backup  test.gitignore
.github/workflows/: rust.yml
examples/: advanced_usage.rs  basic_usage.rs
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/core/: categorizer.rs  comment_generator.rs  mod.rs  normalizer.rs  optimizer.rs  parser.rs  pattern_analyzer.rs  validator.rs
src/models/: errors.rs  gitignore.rs  mod.rs
src/utils/: file.rs  mod.rs  patterns.rs
tests/: integration_tests.rs  unit_tests.rs
