[package]
name = "gix"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line tool to optimize .gitignore files by removing duplicates and normalizing patterns"
license = "MIT"
repository = "https://github.com/yourusername/gix"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "gix"
path = "src/main.rs"
